# s6_apz_lab3

./: README.md
config/: config.yaml  pyproject.toml
config/src/: config.py
facade/: Cargo.toml  build.rs
facade/src/: main.rs
logging/: pyproject.toml
logging/src/: log.py  main.py
messages/: Cargo.toml
messages/src/: main.rs
