[project]
name = "config"
version = "0.1.0"
description = ""
authors = [
    {name = "rhusiev",email = "63148080+rhusiev@users.noreply.github.com"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
